--- a/css/style000.css
+++ b/css/style000.css
@@ -21,6 +21,22 @@ body {
     /* align-content:space-between; */
     /* border: 2px solid green; */
 }
+@media (orientation: landscape) {
+    body {
+        flex-direction: row;
+    }
+    nav {
+        flex-direction: row;
+    }
+}
+@media (orientation: portrait) {
+    body {
+        flex-direction: column;
+    }
+    nav {
+        flex-direction: column;
+    }
+}
 .wrapper {
     margin-top: 1vmin;
     margin-bottom: 1vmin;
