--- a/css/style000.css
+++ b/css/style000.css
@@ -88,7 +88,7 @@ section {
     justify-content: center;
 }
 a {
-    border-radius: 2vh;
+    border-radius: 2vmin;
     background-color:rgb(255, 255, 255);
     box-shadow: 0 0 0.4rem gray;
     overflow: hidden;
