--- a/css/style000.css
+++ b/css/style000.css
@@ -95,14 +95,14 @@ a {
     text-overflow: ellipsis;
     word-wrap: break-word;
     text-align: center;
-    margin-top: 4vh;
-    margin-bottom: 4vh;
-    margin-left: 4vw;
-    margin-right: 4vw;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    padding-left: 2vw;
-    padding-right: 2vw;
+    margin-top: 4vmin;
+    margin-bottom: 4vmin;
+    margin-left: 4vmin;
+    margin-right: 4vmin;
+    padding-top: 2vmin;
+    padding-bottom: 2vmin;
+    padding-left: 2vmin;
+    padding-right: 2vmin;
     text-decoration: none;
 }
 a:active {
