--- a/css/style000.css
+++ b/css/style000.css
@@ -19,6 +19,7 @@ body {
     /* width: 100vw; */
     display: flex;
     flex-direction: column;
+    justify-content: center;
     /* align-content:space-between; */
     /* border: 2px solid green; */
 }
