--- a/css/style001.css
+++ b/css/style001.css
@@ -57,6 +57,22 @@ ul, ol {
 p:first-child, ol, h3 {
     margin-top: 4vmin;
 }
-.zebra p:nth-child(odd) {
+.zebra tr:nth-child(odd) {
     background-color: rgb(230, 230, 230);
+}
+table {
+    width: 100%;
+}
+tr {
+    display: flex;
+    width: 100%;
+}
+.left {
+    width: 40%;
+}
+.right {
+    width: 60%;
+}
+h2 {
+    margin-bottom: 4vmin;
 }
