--- a/css/style001.css
+++ b/css/style001.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
 }
-:root {
-    font-size: 4vmax;
-}
+/* :root {
+    font-size: 4vmin;
+} */
 /* html {
     scroll-behavior: smooth;
 } */
