--- a/css/style000.css
+++ b/css/style000.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 :root {
-    /* font-size: 4vmin; */
+    font-size: 4vmin;
     /* min-width: 200px;
     min-height: 300px; */
 }
