--- a/css/style000.css
+++ b/css/style000.css
@@ -26,6 +26,7 @@ body {
 @media (orientation: landscape) {
     body {
         flex-direction: row;
+        font-size: 3vw;
     }
     nav {
         flex-direction: row;
@@ -34,6 +35,7 @@ body {
 @media (orientation: portrait) {
     body {
         flex-direction: column;
+        font-size: 3vw;
     }
     nav {
         flex-direction: column;
