--- a/css/style001.css
+++ b/css/style001.css
@@ -95,3 +95,27 @@ h2 {
         width: 30vw;
     }
 }
+.xxx-large {
+    font-size: 48px;
+}
+.xx-large {
+    font-size: 32px;
+}
+.x-large {
+    font-size: 24px;
+}
+.large {
+    font-size: 18px;
+}
+.medium {
+    font-size: 16px;
+}
+.small {
+    font-size: 13px;
+}
+.x-small {
+    font-size: 10px;
+}
+.xx-small {
+    font-size: 9px;
+}
