--- a/css/style001.css
+++ b/css/style001.css
@@ -16,7 +16,7 @@ body {
 }
 section {
     border-radius: 1rem;
-    margin: 1rem;
+    margin-bottom: 1rem;
     padding: 1rem;
     background-color:rgb(255, 255, 255);
     box-shadow: 0 0 0.4rem gray;
